# wort-agar-solution

./: CMakeLists.txt  build.sh  readme.md
include/: output.h  wort.h
lib/: output.cpp  wort.cpp
sources/: wort
src/: main.cpp
